// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-dictionary-item should create a dictionary item 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`create-dictionary-item should create a dictionary item 2`] = `
[
  {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Test Dictionary Created",
    "parent": null,
    "translatedIsoCodes": [
      "en-US",
    ],
  },
]
`;

exports[`create-dictionary-item should handle existing dictionary item 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 409",
      "type": "text",
    },
  ],
}
`;
